Change Mailchimp URL to use post-json
lindher1.4

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 
-REACT_APP_MAILCHIMP_URL=https://gmail.us7.list-manage.com/subscribe/post
+REACT_APP_MAILCHIMP_URL=https://gmail.us7.list-manage.com/subscribe/post-json
 REACT_APP_MAILCHIMP_U=592f9c5e0de6e0479e5f633b7
 REACT_APP_MAILCHIMP_ID=f38e4d091d
 
